# grum4llm

./: .gitignore  README.md  environment.yml  notebook_plan.md  pyproject.toml  results_social_choice_iter2.json  results_social_choice_logs_demo.json  results_social_choice_min.json  results_social_choice_noem.json  results_social_choice_timing_demo.json  results_social_choice_tqdm_demo.json
configs/: color_sweep.yml  color_sweep_st.yml  smoke_test.yml
docs/: development_log.md  repro_figure_scripts.md
experiments/: aggregations.py  fit_grum.py  fit_grum_laptops.py  fit_grum_llm.py  paths.py  run_experiment_local.py  run_experiment_orchestration.py  utils.py
notebooks/: 1_reproduction.ipynb  2_llm_colors.ipynb  3_llm_laptops.ipynb  colors.ipynb  llm_colors.ipynb  llm_laptops.ipynb  paper_reproduction.ipynb  repro.ipynb
scripts/: fit_grum.py  generate_color_dataset.py  generate_llm_dataset.py  make_repro_nb.py  run_all_figures.sh  run_asymptotic_repro.sh  run_color_experiment.py  run_elicitation_repro.sh  run_experiment_orchestration.py  run_figure3_jobs.sh  run_figure4_jobs.sh  run_llm_colors.sh  run_llm_experiment.py  run_llm_laptops.sh  run_personalized_choice_experiment.py  run_smoke_test.sh  run_social_choice_experiment.py  run_sushi_experiment.py  slurm_color_qwen_pca.sh  slurm_color_st_pca.sh  slurm_figure2.sh  slurm_figure3.sh  slurm_figure3_dataset1.sh  slurm_figure3_dataset2.sh  slurm_figure4.sh  slurm_figure4_dataset1.sh  slurm_figure4_dataset2.sh  slurm_figure5.sh  slurm_figure5_sushi.sh  slurm_figure6.sh  submit_all_slurm.sh  worker_laptops_slurm.sh  (+2 more)
(+1080 files in other folders)
