[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grums4llms"
version = "0.1.0"
description = "Provider-agnostic GRUM implementation for preference elicitation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
packages = ["grums"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
